updates to bib and glossary

--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -34,7 +34,7 @@
   text={derived allele frequency},
   description={Derived allele frequency}
 }
-
+\newacronym[description={American College of Rheumatology}]{acr}{ACR}{American College of Rheumatology}
 \newacronym[description={Akaike information criterion}]{aic}{AIC}{Akaike information criterion}
 
 \newacronym[description={Kyoto Encyclopedia of Genes and Genomics}]{kegg}{KEGG}{Kyoto Encyclopedia of Genes and Genomics}
