--- a/references.bib
+++ b/references.bib
@@ -3678,3 +3678,166 @@ title = {{Correcting estimators of $\theta$ and Tajima's D for ascertainment bia
 volume = {181},
 year = {2009}
 }
+
+@article{Burton2007,
+abstract = {Despite the recent success of genome-wide association studies in identifying novel loci contributing effects to complex human traits, such as type 2 diabetes and obesity, much of the genetic component of variation in these phenotypes remains unexplained. One way to improving power to detect further novel loci is through meta-analysis of studies from the same population, increasing the sample size over any individual study. Although statistical software analysis packages incorporate routines for meta-analysis, they are ill equipped to meet the challenges of the scale and complexity of data generated in genome-wide association studies. We have developed flexible, open-source software for the meta-analysis of genome-wide association studies. The software incorporates a variety of error trapping facilities, and provides a range of meta-analysis summary statistics. The software is distributed with scripts that allow simple formatting of files containing the results of each association study and generate graphical summaries of genome-wide meta-analysis results. The GWAMA (Genome-Wide Association Meta-Analysis) software has been developed to perform meta-analysis of summary statistics generated from genome-wide association studies of dichotomous phenotypes or quantitative traits. Software with source files, documentation and example data files are freely available online at $\backslash$n                    http://www.well.ox.ac.uk/GWAMA$\backslash$n                    $\backslash$n                  .},
+archivePrefix = {arXiv},
+arxivId = {13960/t8jd4qr3m},
+author = {Burton, Paul R. and Clayton, David G. and Cardon, Lon R. and Craddock, Nick and Deloukas, Panos and Duncanson, Audrey and Kwiatkowski, Dominic P. and McCarthy, Mark I. and Ouwehand, Willem H. and Samani, Nilesh J. and Todd, John A. and Donnelly, Peter and Barrett, Jeffrey C. and Davison, Dan and Easton, Doug and Evans, David and Leung, Hin Tak and Marchini, Jonathan L. and Morris, Andrew P. and Spencer, Chris C.A. and Tobin, Martin D. and Attwood, Antony P. and Boorman, James P. and Cant, Barbara and Everson, Ursula and Hussey, Judith M. and Jolley, Jennifer D. and Knight, Alexandra S. and Koch, Kerstin and Meech, Elizabeth and Nutland, Sarah and Prowse, Christopher V. and Stevens, Helen E. and Taylor, Niall C. and Walters, Graham R. and Walker, Neil M. and Watkins, Nicholas A. and Winzer, Thilo and Jones, Richard W. and McArdle, Wendy L. and Ring, Susan M. and Strachan, David P. and Pembrey, Marcus and Breen, Gerome and {St. Clair}, David and Caesar, Sian and Gordon-Smith, Katherine and Jones, Lisa and Fraser, Christine and Green, Elaine K. and Grozeva, Detelina and Hamshere, Marian L. and Holmans, Peter A. and Jones, Ian R. and Kirov, George and Moskvina, Valentina and Nikolov, Ivan and O'Donovan, Michael C. and Owen, Michael J. and Collier, David A. and Elkin, Amanda and Farmer, Anne and Williamson, Richard and McGuffin, Peter and Young, Allan H. and Ferrier, I. Nicol and Ball, Stephen G. and Balmforth, Anthony J. and Barrett, Jennifer H. and Bishop, D. Timothy and Iles, Mark M. and Maqbool, Azhar and Yuldasheva, Nadira and Hall, Alistair S. and Braund, Peter S. and Dixon, Richard J. and Mangino, Massimo and Stevens, Suzanne and Thompson, John R. and Bredin, Francesca and Tremelling, Mark and Parkes, Miles and Drummond, Hazel and Lees, Charles W. and Nimmo, Elaine R. and Satsangi, Jack and Fisher, Sheila A. and Forbes, Alastair and Lewis, Cathryn M. and Onnie, Clive M. and Prescott, Natalie J. and Sanderson, Jeremy and Mathew, Christopher G. and Barbour, Jamie and Mohiuddin, M. Khalid and Todhunter, Catherine E. and Mansfield, John C. and Ahmad, Tariq and Cummings, Fraser R. and Jewell, Derek P. and Webster, John and Brown, Morris J. and Lathrop, G. Mark and Connell, John and Dominiczak, Anna and {Braga Marcano}, Carolina A. and Burke, Beverley and Dobson, Richard and Gungadoo, Johannie and Lee, Kate L. and Munroe, Patricia B. and Newhouse, Stephen J. and Onipinla, Abiodun and Wallace, Chris and Xue, Mingzhan and Caulfield, Mark and Farrall, Martin and Barton, Anne and Bruce, Ian N. and Donovan, Hannah and Eyre, Steve and Gilbert, Paul D. and Hider, Samantha L. and Hinks, Anne M. and John, Sally L. and Potter, Catherine and Silman, Alan J. and Symmons, Deborah P.M. and Thomson, Wendy and Worthington, Jane and Dunger, David B. and Widmer, Barry and Frayling, Timothy M. and Freathy, Rachel M. and Lango, Hana and Perry, John R.B. and Shields, Beverley M. and Weedon, Michael N. and Hattersley, Andrew T. and Hitman, Graham A. and Walker, Mark and Elliott, Kate S. and Groves, Christopher J. and Lindgren, Cecilia M. and Rayner, Nigel W. and Timpson, Nicholas J. and Zeggini, Eleftheria and Newport, Melanie and Sirugo, Giorgio and Lyons, Emily and Vannberg, Fredrik and Hill, Adrian V.S. and Bradbury, Linda A. and Farrar, Claire and Pointon, Jennifer J. and Wordsworth, Paul and Brown, Matthew A. and Franklyn, Jayne A. and Heward, Joanne M. and Simmonds, Matthew J. and Gough, Stephen C.L. and Seal, Sheila and Stratton, Michael R. and Rahman, Nazneen and Ban, Sclerosis Maria and Goris, An and Sawcer, Stephen J. and Compston, Alastair and Conway, David and Jallow, Muminatou and Rockett, Kirk A. and Bumpstead, Suzannah J. and Chaney, Amy and Downes, Kate and Ghori, Mohammed J.R. and Gwilliam, Rhian and Hunt, Sarah E. and Inouye, Michael and Keniry, Andrew and King, Emma and McGinnis, Ralph and Potter, Simon and Ravindrarajah, Rathi and Whittaker, Pamela and Widden, Claire and Withers, David and Cardin, Niall J. and Ferreira, Teresa and Pereira-Gale, Joanne and Hallgrimsd{\'{o}}ttir, Ingileif B. and Howie, Bryan N. and Spencer, Chris C.A. and Su, Zhan and Teo, Yik Ying and Vukcevic, Damjan and Bentley, David and Compston, Alistair},
+doi = {10.1038/nature05911},
+eprint = {t8jd4qr3m},
+file = {:home/murraycadzow/Dropbox/Papers/nature05911.pdf:pdf},
+isbn = {0028-0836},
+issn = {14764687},
+journal = {Nature},
+number = {7145},
+pages = {661--678},
+pmid = {17554300},
+primaryClass = {13960},
+title = {{Genome-wide association study of 14,000 cases of seven common diseases and 3,000 shared controls}},
+volume = {447},
+year = {2007}
+}
+
+@article{Chang2015,
+abstract = {PLINK 1 is a widely used open-source C/C++ toolset for genome-wide association studies (GWAS) and research in population genetics. However, the steady accumulation of data from imputation and whole-genome sequencing studies has exposed a strong need for even faster and more scalable implementations of key functions. In addition, GWAS and population-genetic data now frequently contain probabilistic calls, phase information, and/or multiallelic variants, none of which can be represented by PLINK 1's primary data format. To address these issues, we are developing a second-generation codebase for PLINK. The first major release from this codebase, PLINK 1.9, introduces extensive use of bit-level parallelism, O(sqrt(n))-time/constant-space Hardy-Weinberg equilibrium and Fisher's exact tests, and many other algorithmic improvements. In combination, these changes accelerate most operations by 1-4 orders of magnitude, and allow the program to handle datasets too large to fit in RAM. This will be followed by PLINK 2.0, which will introduce (a) a new data format capable of efficiently representing probabilities, phase, and multiallelic variants, and (b) extensions of many functions to account for the new types of information. The second-generation versions of PLINK will offer dramatic improvements in performance and compatibility. For the first time, users without access to high-end computing resources can perform several essential analyses of the feature-rich and very large genetic datasets coming into use.},
+archivePrefix = {arXiv},
+arxivId = {1410.4803},
+author = {Chang, Christopher C. and Chow, Carson C. and Tellier, Laurent C.A.M. and Vattikuti, Shashaank and Purcell, Shaun M. and Lee, James J.},
+doi = {10.1186/s13742-015-0047-8},
+eprint = {1410.4803},
+file = {:home/murraycadzow/Dropbox/Papers/s13742-015-0047-8.pdf:pdf},
+isbn = {2047-217x},
+issn = {2047217X},
+journal = {GigaScience},
+keywords = {Computational statistics,GWAS,High-density SNP genotyping,Population genetics,Whole-genome sequencing},
+number = {1},
+pages = {1--16},
+pmid = {25722852},
+title = {{Second-generation PLINK: Rising to the challenge of larger and richer datasets}},
+volume = {4},
+year = {2015}
+}
+
+@misc{plink2,
+author = {Purcell, Shaun and Chang, Christopher},
+title = {{PLINK 1.9}},
+url = {www.cog-genomics.org/plink/1.9/}
+}
+
+@article{Aric1989,
+abstract = {Atherosclerosis Risk in Communities (ARIC) is a new prospective study to investigate the etiology of atherosclerosis and its clinical sequelae and variation in cardiovascular risk factors, medical care, and disease by race, sex, place, and time. in each of four US communities—Forsyth County, North Carolina, Jackson, Mississippi, suburbs of Minneapolis, Minnesota, and Washington County, Maryland—4, 000 adults aged 45–64 years will be examined twice, three years apart. ARIC has coordinating, ultrasound, pulmonary, and electrocardiographic centers and three central laboratories. Three cohorts represent the ethnic mix of their communities; the Jackson cohort, its black population. Examinations include ultrasound scanning of carotid and popliteal arteries; lipids, lipoprotelns, and apolipoproteins assayed in the Lipid Laboratory; and coagulation, inhibition, and platelet and fibrinolytic actmty assayed in the Hemostasis Laboratory. Surveil lance for coronary heart disease will involve review of hospitalizations and deaths among community residents aged 35–74 years. ARIC aims to study atheroscle rosis by direct observation of the disease and by use of modem biochemistry.},
+author = {The ARIC Investigators},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/INVESTIGATORS - 1989 - THE ATHEROSCLEROSIS RISK IN COMMUNITY (ARIC) STUDY DESIGN AND OBJECTIVES.pdf:pdf},
+journal = {American Journal of Epidemiology},
+mendeley-groups = {Datasets},
+month = {apr},
+number = {4},
+pages = {687--702},
+title = {{The Atherosclerosis Risk in Community (ARIC) Study: Design and Objectives}},
+url = {http://aje.oxfordjournals.org/content/129/4/687.abstract},
+volume = {129},
+year = {1989}
+}
+
+@article{McCarthy2016,
+abstract = {We describe a reference panel of 64,976 human haplotypes at 39,235,157 SNPs constructed using whole-genome sequence data from 20 studies of predominantly European ancestry. Using this resource leads to accurate genotype imputation at minor allele frequencies as low as 0.1{\%} and a large increase in the number of SNPs tested in association studies, and it can help to discover and refine causal loci. We describe remote server resources that allow researchers to carry out imputation and phasing consistently and efficiently.},
+author = {McCarthy, Shane and Das, Sayantan and Kretzschmar, Warren and Delaneau, Olivier and Wood, Andrew R and Teumer, Alexander and Kang, Hyun Min and Fuchsberger, Christian and Danecek, Petr and Sharp, Kevin and Luo, Yang and Sidore, Carlo and Kwong, Alan and Timpson, Nicholas and Koskinen, Seppo and Vrieze, Scott and Scott, Laura J and Zhang, He and Mahajan, Anubha and Veldink, Jan and Peters, Ulrike and Pato, Carlos and van Duijn, Cornelia M and Gillies, Christopher E and Gandin, Ilaria and Mezzavilla, Massimo and Gilly, Arthur and Cocca, Massimiliano and Traglia, Michela and Angius, Andrea and Barrett, Jeffrey C and Boomsma, Dorrett and Branham, Kari and Breen, Gerome and Brummett, Chad M and Busonero, Fabio and Campbell, Harry and Chan, Andrew and Chen, Sai and Chew, Emily and Collins, Francis S and Corbin, Laura J and Smith, George Davey and Dedoussis, George and Dorr, Marcus and Farmaki, Aliki-Eleni and Ferrucci, Luigi and Forer, Lukas and Fraser, Ross M and Gabriel, Stacey and Levy, Shawn and Groop, Leif and Harrison, Tabitha and Hattersley, Andrew and Holmen, Oddgeir L and Hveem, Kristian and Kretzler, Matthias and Lee, James C and McGue, Matt and Meitinger, Thomas and Melzer, David and Min, Josine L and Mohlke, Karen L and Vincent, John B and Nauck, Matthias and Nickerson, Deborah and Palotie, Aarno and Pato, Michele and Pirastu, Nicola and McInnis, Melvin and Richards, J Brent and Sala, Cinzia and Salomaa, Veikko and Schlessinger, David and Schoenherr, Sebastian and Slagboom, P Eline and Small, Kerrin and Spector, Timothy and Stambolian, Dwight and Tuke, Marcus and Tuomilehto, Jaakko and {Van den Berg}, Leonard H and {Van Rheenen}, Wouter and Volker, Uwe and Wijmenga, Cisca and Toniolo, Daniela and Zeggini, Eleftheria and Gasparini, Paolo and Sampson, Matthew G and Wilson, James F and Frayling, Timothy and de Bakker, Paul I W and Swertz, Morris A and McCarroll, Steven and Kooperberg, Charles and Dekker, Annelot and Altshuler, David and Willer, Cristen and Iacono, William and Ripatti, Samuli and Soranzo, Nicole and Walter, Klaudia and Swaroop, Anand and Cucca, Francesco and Anderson, Carl A and Myers, Richard M and Boehnke, Michael and McCarthy, Mark I and Durbin, Richard and Abecasis, Gon{\c{c}}alo and Marchini, Jonathan},
+doi = {10.1038/ng.3643},
+file = {:home/murraycadzow/Dropbox/Papers/ng.3643.pdf:pdf},
+isbn = {1546-1718 (Electronic) 1061-4036 (Linking)},
+issn = {1061-4036},
+journal = {Nature Genetics},
+number = {10},
+pages = {1279--1283},
+pmid = {27548312},
+title = {{A reference panel of 64,976 haplotypes for genotype imputation}},
+url = {http://www.nature.com/doifinder/10.1038/ng.3643},
+volume = {48},
+year = {2016}
+}
+
+@article{Fay2013,
+abstract = {Adaptive evolution has provided us with a unique set of characteristics that define us as humans, including morphological, physiological and cellular changes. Yet, natural selection provides no assurances that adaptation is without human health consequences; advantageous mutations will increase in frequency so long as there is a net gain in fitness. As such, the current incidence of human disease can depend on previous adaptations. Here, I review genome-wide and gene-specific studies in which adaptive evolution has played a role in shaping human genetic disease. In addition to the disease consequences of adaptive phenotypes, such as bipedal locomotion and resistance to certain pathogens, I review evidence that adaptive mutations have influenced the frequency of linked disease alleles through genetic hitchhiking. Taken together, the links between human adaptation and disease highlight the importance of their combined influence on functional variation within the human genome and offer opportunities to discover and characterize such variation.},
+annote = {From Duplicate 2 (Disease consequences of human adaptation - Fay, Justin C.)
+
+From Duplicate 1 ( 
+
+
+Disease consequences of human adaptation
+
+
+- Fay, Justin C. )
+
+},
+author = {Fay, Justin C.},
+doi = {10.1016/j.atg.2013.08.001},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fay - 2013 - Disease consequences of human adaptation.pdf:pdf},
+isbn = {3143622156},
+issn = {22120661},
+journal = {Applied {\&} Translational Genomics},
+keywords = {Adaptation,Evolution,Health,Hitchhiking,Trade-offs},
+month = {dec},
+pages = {42--47},
+publisher = {The Authors},
+title = {{Disease consequences of human adaptation}},
+url = {http://www.sciencedirect.com/science/article/pii/S2212066113000124 http://linkinghub.elsevier.com/retrieve/pii/S2212066113000124},
+volume = {2},
+year = {2013}
+}
+
+@article{Dalbeth2016,
+abstract = {Abstract Objective Enthesitis-related arthritis (ERA) is a juvenile idiopathic arthritis (JIA) category primarily affecting entheses and peripheral joints. This study evaluated efficacy, safety, and pharmacokinetics of adalimumab versus placebo in patients with ERA. Methods This is a phase III, multicenter, randomized, double-blind study in patients aged ≥6 to {\textless}18 years with ERA treated with adalimumab (24 mg/m2, maximum dose 40 mg every other week) or placebo for 12 weeks followed by up to 192 weeks of open-label adalimumab. Primary endpoint was percent change from baseline in number of active joints with arthritis (AJC) at week 12. Samples were collected to determine adalimumab serum concentrations. Adverse events (AE) were assessed throughout the study. Results Forty-six patients were randomized (31 adalimumab/15 placebo). At baseline mean age was 12.9 years; mean duration of ERA symptoms was 2.6 years; mean AJC was 7.8, and mean enthesitis count was 8.1. Mean percent change from baseline in AJC at week 12 was greater in the adalimumab group versus placebo (-62.6{\%} versus -11.6{\%}, P = 0.039). Most secondary variables favored adalimumab versus placebo at week 12. Treatment response further increased with continued adalimumab therapy through week 52. Mean steady-state adalimumab serum concentrations were 7.5–11.8 µg/mL, similar to patients ≥2 years old with polyarticular JIA. AE},
+author = {Dalbeth, Nicola and Schumacher, H. Ralph and Fransen, Jaap and Neogi, Tuhina and Jansen, Tim L. and Brown, Melanie and Louthrenoo, Worawit and Vazquez-Mellado, Janitzia and Eliseev, Maxim and McCarthy, Geraldine and Stamp, Lisa K. and Perez-Ruiz, Fernando and Sivera, Francisca and Ea, Hang-Korng Korng and Gerritsen, Martijn and Scire, Carlo A. and Cavagna, Lorenzo and Lin, Chingtsai and Chou, Yin-Yi Yi and Tausche, Anne-Kathrin Kathrin and {da Rocha Castelar-Pinheiro}, Geraldo and Janssen, Matthijs and Chen, Jiunn-Horng Horng and Cimmino, Marco A. and Uhlig, Till and Taylor, William J.},
+doi = {10.1002/acr.22896},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Dalbeth et al. - 2016 - Survey definitions of gout for epidemiological studies Comparison with crystal identification as the gold standa.pdf:pdf;:home/murraycadzow/Dropbox/Papers/acr22896.pdf:pdf;:home/murraycadzow/Dropbox/Papers/acr.22896.pdf:pdf},
+isbn = {4417278598},
+issn = {21514658},
+journal = {Arthritis Care and Research},
+month = {mar},
+number = {12},
+pages = {1894--1898},
+pmid = {26097208},
+title = {{Survey Definitions of Gout for Epidemiologic Studies: Comparison With Crystal Identification as the Gold Standard}},
+url = {http://doi.wiley.com/10.1002/acr.22896},
+volume = {68},
+year = {2016}
+}
+
+@article{Splansky2007,
+abstract = {For nearly 60 years, the Framingham Heart Study has examined the natural history, risk factors, and prognosis of cardiovascular, lung, and other diseases. Recruitment of the Original Cohort began in 1948. Twenty-three years later, 3,548 children of the Original Cohort, along with 1,576 of their spouses, enrolled in the Offspring Cohort. Beginning in 2002, 4,095 adults having at least one parent in the Offspring Cohort enrolled in the Third Generation Cohort, along with 103 parents of Third Generation Cohort participants who were not previously enrolled in the Offspring Cohort. The objective of new recruitment was to complement phenotypic and genotypic information obtained from prior generations, with priority assigned to larger families. From a pool of 6,553 eligible individuals, 1,912 men and 2,183 women consented and attended the first examination (mean age: 40 (standard deviation: 9) years; range: 19-72 years). The examination included clinical and laboratory assessments of vascular risk factors and imaging for subclinical atherosclerosis, as well as assessment of cardiac structure and function. The comparison of Third Generation Cohort data with measures previously collected from the first two generations will facilitate investigations of genetic and environmental risk factors for subclinical and overt diseases, with a focus on cardiovascular and lung disorders.},
+author = {Splansky, Greta Lee and Corey, Diane and Yang, Qiong and Atwood, Larry D and Cupples, L Adrienne and Benjamin, Emelia J and D'Agostino, Ralph B and Fox, Caroline S and Larson, Martin G and Murabito, Joanne M and O'Donnell, Christopher J and Vasan, Ramachandran S and Wolf, Philip a and Levy, Daniel},
+doi = {10.1093/aje/kwm021},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Splansky et al. - 2007 - The Third Generation Cohort of the National Heart, Lung, and Blood Institute's Framingham Heart Study design, r.pdf:pdf},
+issn = {0002-9262},
+journal = {American journal of epidemiology},
+keywords = {Adolescent,Adult,Atherosclerosis,Atherosclerosis: prevention {\&} control,Cardiovascular Diseases,Cardiovascular Diseases: epidemiology,Cardiovascular Diseases: genetics,Cardiovascular Diseases: prevention {\&} control,Cohort Studies,Epidemiologic Research Design,FHS,Family Health,Female,Humans,Male,Mass Screening,Mass Screening: methods,Mass Screening: organization {\&} administration,Middle Aged,Patient Selection,Physical Examination,Risk Factors,United States,United States: epidemiology},
+mendeley-groups = {Datasets},
+mendeley-tags = {FHS},
+month = {jun},
+number = {11},
+pages = {1328--35},
+pmid = {17372189},
+title = {{The Third Generation Cohort of the National Heart, Lung, and Blood Institute's Framingham Heart Study: design, recruitment, and initial examination.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/17372189},
+volume = {165},
+year = {2007}
+}
+
+@article{Colhoun2003,
+abstract = {Inability to replicate many results has led to increasing scepticism about the value of simple association study designs for detection of genetic variants contributing to common complex traits. Much attention has been drawn to the problems that might, in theory, bedevil this approach, including confounding from population structure, misclassification of outcome, and allelic heterogeneity. Other researchers have argued that absence of replication may indicate true heterogeneity in gene-disease associations. We suggest that the most important factors underlying inability to replicate these associations are publication bias, failure to attribute results to chance, and inadequate sample sizes, problems that are all rectifiable. Without changes to present practice, we risk wastage of scientific effort and rejection of a potentially useful research strategy.},
+author = {Colhoun, Helen M. and McKeigue, Paul M. and Smith, George Davey},
+doi = {10.1016/S0140-6736(03)12715-8},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S0140673603127158-main.pdf:pdf},
+isbn = {0140-6736 (Print)$\backslash$n0140-6736 (Linking)},
+issn = {01406736},
+journal = {Lancet},
+mendeley-groups = {GWAS},
+number = {9360},
+pages = {865--872},
+pmid = {12642066},
+title = {{Problems of reporting genetic associations with complex outcomes}},
+volume = {361},
+year = {2003}
+}
+
